Fix missing margin in article date

--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ article {
   font-size: 0.8em;
   text-align: right;
   margin-right: 20px;
+  margin-left: 20px;
   float: right;
 }
 
